Fix distance between Create button and Covers grid in Create panel.

--- a/src/panels/Create.css
+++ b/src/panels/Create.css
@@ -9,6 +9,7 @@
     text-align: center;
     margin-left: 8px;
     margin-right: 8px;
+    margin-bottom: 46px;
 }
 
 .RadioCard__in2 {
